--- a/package.json
+++ b/package.json
@@ -3,10 +3,19 @@
   "version": "1.0.0",
   "description": "## ローカルサーバーでHTMLを確認する ### todoapp/ディレクトリに移動する $ cd todoapp/",
   "main": "index.js",
-  "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node src/index.js",
+    "dev": "env-cmd -f ./config/dev.env nodemon src/index.js"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "dotenv": "^16.4.5",
+    "ejs": "^3.1.10",
+    "env-cmd": "^10.1.0",
+    "express": "^4.19.2",
+    "mysql": "^2.18.1",
+    "nodemon": "^3.1.3"
+  }
 }
