--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node src/index.js",
-    "dev": "env-cmd -f ./config/dev_mysql.env nodemon src/index.js"
+    "dev": "env-cmd -f ./config/dev_psql.env nodemon src/index.js"
   },
   "author": "",
   "license": "ISC",
@@ -15,7 +15,10 @@
     "ejs": "^3.1.10",
     "env-cmd": "^10.1.0",
     "express": "^4.19.2",
+    "express-promise-router": "^4.1.1",
     "mysql": "^2.18.1",
-    "nodemon": "^3.1.3"
+    "nodemon": "^3.1.3",
+    "pg": "^8.12.0",
+    "psql": "^0.0.1"
   }
 }
