--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node src/index.js",
-    "dev": "nodemon src/index.js"
+    "dev": "env-cmd -f ./config/dev_psql.env nodemon src/index.js"
   },
   "author": "",
   "license": "ISC",
@@ -19,6 +19,7 @@
     "mysql": "^2.18.1",
     "nodemon": "^3.1.3",
     "pg": "^8.12.0",
-    "psql": "^0.0.1"
+    "psql": "^0.0.1",
+    "router": "^1.3.8"
   }
 }
